[package]
name = "shared_lru"
description = "Have multiple caches with heterogenous tracking of recency"
version = "0.1.0"
edition = "2021"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
tags = ["cache", "lru"]

[dependencies]
owning_ref = "0.4.1"
rand = { version = "0.8.4", features = ["small_rng"] }
