[package]
name = "shared_lru"
description = "Have multiple caches with heterogenous tracking of recency"
version = "0.1.5"
edition = "2018"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
tags = ["cache", "lru"]
repository = "https://github.com/shelbyd/shared_lru"
license = "MIT"

[dependencies]
dashmap = "4.0.2"
log = "0.4.14"
lru = "0.7.0"
rand = { version = "0.8.4", features = ["small_rng"] }
serde_json = { version = "1.0.72", optional = true }

[features]
default = []

[profile.release]
debug = true
